# backend/src/main/kotlin/com/mealplanplus/api/domain/meal/MealController.kt
@@ -29,5 +29,8 @@ class MealController(private val service: MealService) : MealsApi {
     override fun toggleMealFavorite(id: Long): ResponseEntity<MealDto> =
         ResponseEntity.ok(service.toggleFavorite(id, currentUid()))
 
+    override fun toggleMealShare(id: Long): ResponseEntity<MealDto> =
+        ResponseEntity.ok(service.toggleShare(id, currentUid()))
+
     private fun currentUid() = SecurityContextHolder.getContext().authentication.name
 }
